<resources>
    <string name="app_name">Composition Collector</string>
    <string name="action_settings">Settings</string>
    <string name="title_hint">Title</string>
    <string name="weather_hint">Weather</string>
    <string name="location_hint">Location</string>
    <string name="description_hint">Description</string>
    <string name="time_of_day_hint">Time of day</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="gear_hint">Gear</string>
    <string name="button_delete">Delete</string>
</resources>
